--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
- body {
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
+* {
+	list-style: none;
+	text-decoration: none;
+}
+body {
+	font-family: 'Space Grotesk', sans-serif;
 	 background: #FFF;
 	 height: 100%;
 }
@@ -7,32 +15,65 @@
 	 margin: 30px auto;
 	 color: #fff;
 	 text-align: center;
-   margin-top: 200px;
+  	 margin-top: 80px;
 }
- h1, h2, h3 {
-	 font-family: 'Roboto', sans-serif;
-	 font-weight: 100;
-	 font-size: 2.6em;
+ h1 {
+	 font-size: 2.5em;
 	 text-transform: uppercase;
-   color: #111;
+  	 color: #111;
+}
+h2 {
+	font-size: 1.6em;
+	text-transform: uppercase;
+	color: #111;
+}
+h3 {
+	padding: 10px;
+	font-size: 1.2em;
 }
 p {
-	 font-size: 50px;
+	font-size: 2em;
    color: #111;
-   font-family: 'Roboto', sans-serif;
    margin: 0;
-   font-weight: bold;
+}
+li {
+	font-size: 0.8em;
 }
  button {
 	 border-radius: 5px;
-	 background: #007bff;
-	 color: #fff;
+	 background: rgb(0,0,0);
+	 background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgb(65, 67, 69) 100%);
+	  color: #fff;
 	 border: solid 1px #fff;
 	 text-decoration: none;
 	 cursor: pointer;
-	 font-size: 1.2em;
+	 font-size: 1em;
 	 padding: 18px 10px;
 	 width: 180px;
 	 margin: 10px;
 	 outline: none;
+}
+
+.changelog {
+	width: 650px;
+	margin: 50px auto;
+	text-align: center;
+	margin-top: 50px;
+	background-color: #afafaf7e;
+	padding: 10px 20px 30px 10px;
+}
+footer {
+	margin-top: -20px;
+	text-align: center;
+	font-size: 0.7em;
+	color: #505050;
+	font-weight: 400;
+}
+
+footer a {
+	color: #111;
+	font-weight: 600;
+}
+footer a:hover {
+	text-decoration: underline;
 }
